fix file lookup for 4.3